@@ -1,9 +1,4 @@
 SUBDIRS = gnome webkit
 
-themedir = $(THEME_DIR)
-theme_DATA = gnome.theme webkit.theme
-
-EXTRA_DIST = $(theme_DATA)
-
 DISTCLEANFILES = \
 	Makefile.in
