@@ -1,5 +1,5 @@
 themedir = $(THEME_DIR)/gnome
-theme_DATA = gtkrc bg.jpg
+theme_DATA = index.theme gtkrc bg.jpg
 
 EXTRA_DIST = $(theme_DATA)
 
