@@ -3,5 +3,5 @@ name=GNOME
 description=GNOME Theme
 engine=gtk
 session=gnome
-gtkrc=gnome/gtkrc
-background-image=gnome/bg.jpg
+gtkrc=gtkrc
+background-image=bg.jpg
