@@ -1,5 +1,5 @@
 themedir = $(THEME_DIR)/webkit
-theme_DATA = index.html bg.jpg
+theme_DATA = index.theme index.html bg.jpg
 
 EXTRA_DIST = $(theme_DATA)
 
